--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,9 @@
         <body>
                 <nav>
                 <ul>
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/about">About</a></li>
-                        <li><a href="/maps">Maps</a></li>
+                        <li><a href="/clusteredcrimemaps/">Home</a></li>
+                        <li><a href="/clusteredcrimemaps/about">About</a></li>
+                        <li><a href="/clusteredcrimemaps/maps">Maps</a></li>
                 </ul>
                 </nav>
                 <div class="container">
