Website - Mild Logisitical Fixes
Changed things to avoid a hard coded URL

--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -1,9 +1,9 @@
 <section class="page-header">
   <h1 class="project-name">{{ site.title }}</h1>
   <h2 class="project-tagline">{{ site.tagline }}</h2>
-  <a href="/clusteredcrimemaps/" class="btn">Home</a>
-  <a href="/clusteredcrimemaps/about/" class="btn">About</a>
-  <a href="/clusteredcrimemaps/maps_view/" class="btn">Maps</a>
-  <a href="/clusteredcrimemaps/posts/" class="btn">Posts</a>
+  <a href="{{ site.github.url }}" class="btn">Home</a>
+  <a href="{{ site.github.url }}/about/" class="btn">About</a>
+  <a href="{{ site.github.url }}/maps_view/" class="btn">Maps</a>
+  <a href="{{ site.github.url }}/posts/" class="btn">Posts</a>
   <a href="https://github.com/marquettecomputationalsocialscience" class="btn">View on Github</a>
 </section>
