--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,9 +5,7 @@ layout: default
 <div class="home">
 
   <h1 class="page-heading">Home</h1>
-  <p> This website is an aggregate of the work being done to analyze
-      the use of algorithms from a human perspective. As the summer
-      progresses work will be visible here.
+  <p> This website is an aggregate of the work being done in the Marquette Computational Social Sciences lab to apply mathematical algorithms and data insights to real life social questions and concerns. Currently, we are hosting only the Milwaukee Crime Clustering project here, but more will be added over time.
 
       
   </p>
